objects/EUR_CRM_GB_Territory_Objective__c.object
<CustomObject>
    <description>PREU GB Data Model</description>
    <fields>
        <fullName>EUR_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EUR_CRM_Objective__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Objective</label>
        <referenceTo>EUR_CRM_GB_Objective__c</referenceTo>
        <relationshipLabel>Territory Objectives</relationshipLabel>
        <relationshipName>Territory_Objectives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region</label>
        <referenceTo>EUR_CRM_Region__c</referenceTo>
        <relationshipLabel>Territory Objectives</relationshipLabel>
        <relationshipName>Territory_Objectives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Target_Number__c</fullName>
        <label>Target (Number)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Target_Percent__c</fullName>
        <label>Target (Percent)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Target__c</fullName>
        <formula>IF(!ISBLANK( EUR_CRM_Target_Number__c ), TEXT(EUR_CRM_Target_Number__c), IF(!ISBLANK( EUR_CRM_Target_Percent__c  ), TEXT(EUR_CRM_Target_Percent__c*100)+&apos;%&apos;, &apos;&apos;))</formula>
        <label>Target</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Territory</label>
        <referenceTo>EUR_CRM_Territory__c</referenceTo>
        <relationshipLabel>Territory Objectives</relationshipLabel>
        <relationshipName>Territory_Objectives</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Territory Objective (EU)</label>
    <nameField>
        <displayFormat>TON-{00000000}</displayFormat>
        <label>Territory Objective No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Territory Objectives (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_GB_Region_KPI_Objective</fullName>
        <active>true</active>
        <label>GB Region KPI Objective</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_GB_Territory_KPI_Objective</fullName>
        <active>true</active>
        <label>GB Territory KPI Objective</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>